# wagtail-oidc-provider

./: .gitignore  LICENCE  MANIFEST.in  Makefile  README.md  pyproject.toml  runtests.py  tbump.toml  tox.ini
.github/workflows/: build_n_publish.yml
tests/: requirements.txt  settings.py
wagtail_oidc_provider/: apps.py  wagtail_hooks.py
wagtail_oidc_provider/templates/wagtailadmin/wagtail_oidc_provider/panels/: kid_panel.html
